[tool.poetry]
name = "at-what-cost"
version = "0.1.0"
description = ""
authors = ["Kelvin Sundli <kelvin.sundli@cognite.com>"]
readme = "README.md"
packages = [{include = "at_what_cost"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.15.2"
scipy = "^1.9.3"
plotly = "^5.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
